# lisseshop

./: README.md
Mini-WebApp-Shop-test/: .pre-commit-config.yaml  Makefile  docker-compose.yaml  mypy.ini  pyproject.toml
Mini-WebApp-Shop-test/.cursor/rules/: start.mdc
Mini-WebApp-Shop-test/backend/: .env  Dockerfile  config.py  main.py  start.sh
Mini-WebApp-Shop-test/backend/core/: dal.py  schemas.py
Mini-WebApp-Shop-test/backend/models/: alembic.ini
Mini-WebApp-Shop-test/backend/models/alembic/: env.py
Mini-WebApp-Shop-test/backend/models/src/: __init__.py  database.py  models.py  repository.py
Mini-WebApp-Shop-test/backend/routers/goods/: dal.py  repository.py  router.py  schemas.py
Mini-WebApp-Shop-test/backend/routers/order_goods/: dal.py  repository.py  router.py  schemas.py
Mini-WebApp-Shop-test/backend/routers/orders/: dal.py  repository.py  router.py  schemas.py
Mini-WebApp-Shop-test/backend/routers/users/: dal.py  repository.py  (+2 more)
Mini-WebApp-Shop-test/bot/: Dockerfile  config.py  main.py
Mini-WebApp-Shop-test/bot/dialogs/: __init__.py
Mini-WebApp-Shop-test/bot/handlers/: __init__.py  start.py
Mini-WebApp-Shop-test/bot/states/: user.py
Mini-WebApp-Shop-test/certbot/: dockerfile
Mini-WebApp-Shop-test/frontend/: .env  .eslintrc.js  .gitignore  .prettierrc  Dockerfile  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vue.config.js
Mini-WebApp-Shop-test/frontend/public/: index.html
Mini-WebApp-Shop-test/frontend/src/: App.vue  main.ts  typings.d.ts
Mini-WebApp-Shop-test/nginx/conf.d/: nginx.conf
(+117 files in other folders)
