[project]
name = "example-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.8.1",
]

[dependency-groups]
dev = [
    "ruff>=0.11.4",
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
]
bot = [
    "aiogram-dialog>=2.3.1",
    "aiogram>=3.19.0",
]
backend = [
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.12",
    "sqlalchemy[mypy]>=2.0.40",
]

[tool.ruff]
line-length = 79
exclude = ["frontend/", "backend/models/alembic"]
